--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Today's Todo List!</title>
+    <title>Today's To-Do List!</title>
     <link rel="shortcut icon" type="image/ico" href="assets/images/todoicon.ico">
 </head>
 
 <body>
 
     <header>
-        <h1>Welcome To Your Very Own Personal Todo List!</h1>
+        <h1>Welcome To Your Very Own Personal To-Do List!</h1>
     </header>
     <form>
         <input type="text" class="todo-input">
